# RethinkingObjects

./: .gitignore  README.md  _pytest.ini  a_encapsulation.py  b_plugged.py  c_immutable.py  composition.py  d_distance.py  distance2.py  e_distance.py  encapsulation.py  f1_test.py  f_composition.py  g_shapes.py  h_shapes.py  pants.toml  plugged.py  pyproject.toml  pytest.ini  remove_blanks.py  test_f1.py  test_f2.py  untouch.py  z.bat
experiments/: BUILD  a.py  b.py  foo.py  tuple_syntax.py
experiments/rust_objects1/: main.rs
experiments/rust_objects2/: Cargo.toml  main.rs
experiments/rust_objects3/: Cargo.toml  main.rs
experiments/rust_speak/: Cargo.toml  main.rs
experiments/rust_speak2/: Cargo.toml  main.rs
test_experiments/: foo_test.py
utils/: BUILD  c.py  d.py  e.py
